@@ -26,12 +26,12 @@ common_libs =  \
 
 opreport_SOURCES = opreport.cpp \
 	opreport_options.h opreport_options.cpp \
-	$(pp_commons)
+	populate.cpp populate.h $(pp_commons)
 opreport_LDADD = $(common_libs)
 
 opannotate_SOURCES = opannotate.cpp \
 	opannotate_options.h opannotate_options.cpp \
-	$(pp_commons)
+	populate.cpp populate.h $(pp_commons)
 opannotate_LDADD = $(common_libs)
 
 opgprof_SOURCES = opgprof.cpp \
